--- a/khoBlog/static/khoBlog/css/_custom.scss
+++ b/khoBlog/static/khoBlog/css/_custom.scss
@@ -20,6 +20,6 @@ $font-family: $font-family-base;
     color: #fff !important;
 }
 
-@import '../vendor/node_modules/bootstrap/scss/bootstrap.scss';
+@import '../../vendor/node_modules/bootstrap/scss/bootstrap.scss';
 
 /* Personnalisation des éléments */
