--- a/blog/templates/blog/category_list.html
+++ b/blog/templates/blog/category_list.html
@@ -14,7 +14,7 @@
                                     <i class="bi bi-pencil-square"></i>
                                 </a>
 
-                                <a class="btn btn-danger" href="{% url 'admin:blog_category_change' pk=item.id %}">
+                                <a class="btn btn-danger" href="{% url 'admin:blog_category_change' object_id=item.id %}">
                                     <i class="bi bi-pencil-square"></i>
                                 </a>
                             </div>
