floatend and delete user in admin

--- a/khoBlog/templates/403.html
+++ b/khoBlog/templates/403.html
@@ -7,7 +7,7 @@
 
 {% block page_top_title %}
     <h2>Error 403
-        <a class="btn btn-primary" href="{% url 'blog:latest' %}">
+        <a class="btn btn-primary float-end" href="{% url 'blog:latest' %}">
             Latest Post
         </a>
     </h2>
