--- a/blog/templates/blog/category_list.html
+++ b/blog/templates/blog/category_list.html
@@ -4,7 +4,7 @@
 
 {% block content_main %}
     {% for item in category_list %}
-        <div class="card text-white border-secondary bg-dark mb-2">
+        <div class="card text-white border-secondary bg-dark mb-2 shadow">
             <div class="card-header border-secondary">
                 <h2>Category #{{ item.id }}
                     {% block superButtons %}
