padding on image

--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -35,7 +35,7 @@
         <div class="row g-0">
             <div class="col">
                 {% if object.profile_pic %}
-                    <img class="w-75" src="{{ object.profile_pic.url }}" alt="Profile Pic of {{ object.username }}" />
+                    <img class="w-75 p-2" src="{{ object.profile_pic.url }}" alt="Profile Pic of {{ object.username }}" />
                 {% endif %}
             </div>
             <div class="col-10">
