--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block page_top_title %}
-    <h2>{{ title }}</h2>
+    <h2 class="clearfix">{{ title }}</h2>
 {% endblock page_top_title %}
 
 {% block main %}
