--- a/khoBlog/static/khoBlog/css/main.scss
+++ b/khoBlog/static/khoBlog/css/main.scss
@@ -54,7 +54,6 @@
     font-weight: bold;
 }
 
-.card-body,
 .todo {
     & .todo-completed {
         text-decoration: line-through;
@@ -66,35 +65,42 @@
     & .todoTodo {
         padding: 16px !important;
     }
+}
 
-    & .card-text {
-        font-variant-ligatures: common-ligatures;
+.markdownx-preview,
+.card-body .card-text {
+    font-variant-ligatures: common-ligatures;
+    & ol,
+    ul {
+        padding: 0 32px;
 
-        & ol,
-        ul {
-            padding: 0 32px;
-
-            & li {
-                border: none;
-            }
+        & li {
+            border: none;
         }
+    }
 
-        & img {
-            max-width: 100%;
-        }
+    & img {
+        max-width: 100%;
+    }
 
-        & .highlight {
-            display: block;
-            box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
-            margin-bottom: 16px;
-            padding: 0.01em 16px;
-            overflow-x: auto !important;
-            resize: both;
+    & dt {
+        font-weight: 700;
+    }
 
-            & .lineno {
-                user-select: none;
-            }
-        }
+    & dd {
+        margin: 0 0 0 16px;
+    }
+
+    & .emojione {
+        width: 18px;
+    }
+
+    & blockquote {
+        padding-left: 1.5em;
+        border-left: 5px solid rgba(0, 0, 0, 0.1);
+        margin: 1.2em 0;
+        color: hsla(0, 0%, 100%, 0.4);
+        border-left-color: hsla(0, 0%, 100%, 0.1);
 
         & dt {
             font-weight: 700;
@@ -103,88 +109,72 @@
         & dd {
             margin: 0 0 0 16px;
         }
+    }
 
-        & .emojione {
-            width: 18px;
-        }
+    mark {
+        background-color: #f3b700;
+        border-radius: 0.5rem !important;
+    }
 
-        & blockquote {
-            padding-left: 1.5em;
-            border-left: 5px solid rgba(0, 0, 0, 0.1);
-            margin: 1.2em 0;
-            color: hsla(0, 0%, 100%, 0.4);
-            border-left-color: hsla(0, 0%, 100%, 0.1);
+    kbd {
+        font-family: Lato, Helvetica Neue, Helvetica, sans-serif;
+        background-color: #fff;
+        border: 1px solid rgba(63, 63, 63, 0.25);
+        border-radius: 3px;
+        box-shadow: 0 1px 0 rgba(63, 63, 63, 0.25);
+        color: #333;
+        display: inline-block;
+        font-size: 0.8em;
+        margin: 0 0.1em;
+        padding: 0.1em 0.6em;
+        white-space: nowrap;
+    }
 
-            & dt {
-                font-weight: 700;
-            }
+    abbr[title] {
+        border-bottom: 1px dotted #777;
+        cursor: help;
+    }
 
-            & dd {
-                margin: 0 0 0 16px;
-            }
-        }
+    .task-list-item {
+        list-style-type: none;
+    }
 
-        code,
-        pre,
-        samp {
-            font-family: Roboto Mono, Lucida Sans Typewriter, Lucida Console, monaco, Courrier, monospace;
-            font-size: 0.85em;
-        }
+    .task-list-item-checkbox {
+        margin: 0 0.2em 0 -1.3em;
+    }
 
-        code *,
-        pre *,
-        samp * {
-            font-size: inherit;
-        }
+    .footnote {
+        position: relative;
+        top: -0.25em;
+        vertical-align: top;
+    }
 
-        mark {
-            background-color: #f3b700;
-            border-radius: 0.5rem !important;
-        }
+    .page-break-after {
+        page-break-after: always;
+    }
 
-        kbd {
-            font-family: Lato, Helvetica Neue, Helvetica, sans-serif;
-            background-color: #fff;
-            border: 1px solid rgba(63, 63, 63, 0.25);
-            border-radius: 3px;
-            box-shadow: 0 1px 0 rgba(63, 63, 63, 0.25);
-            color: #333;
-            display: inline-block;
-            font-size: 0.8em;
-            margin: 0 0.1em;
-            padding: 0.1em 0.6em;
-            white-space: nowrap;
-        }
+    .abc-notation-block {
+        overflow-x: auto !important;
+    }
 
-        abbr[title] {
-            border-bottom: 1px dotted #777;
-            cursor: help;
-        }
+    & .highlighttable {
+        display: block;
+        box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+        margin-bottom: 16px;
+        padding: 0.01em 16px;
+        overflow-x: auto !important;
+        resize: both;
 
-        .task-list-item {
-            list-style-type: none;
-        }
+        background: #002b36;
+        color: #839496;
 
-        .task-list-item-checkbox {
-            margin: 0 0.2em 0 -1.3em;
-        }
-
-        .footnote {
-            position: relative;
-            top: -0.25em;
-            vertical-align: top;
-        }
-
-        .page-break-after {
-            page-break-after: always;
-        }
-
-        .abc-notation-block {
-            overflow-x: auto !important;
+        & .linenos {
+            user-select: none;
+            padding-right: 1rem;
         }
     }
 
-    & .markdownx-preview {
+    & .highlight-preview {
         margin-top: 1.2em !important;
         border-top: 4px #333 solid !important;
     }
