--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -80,13 +80,15 @@
     {% if user.is_superuser %}
         {% if view_as == "self" %}
             <div class="table-responsive mt-2">
-                <table class="table table-sm table-dark shadow mb-2">
+                <table class="table table-dark table-striped shadow mb-2">
                     <thead>
-                        <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First Name</th>
-                        <th scope="col">Last Name</th>
-                        <th scope="col">Username</th>
+                        <tr class="border-bottom-secondary">
+                            <th scope="col">#</th>
+                            <th scope="col"><a href="{% url 'admin:accounts_customuser_changelist' %}">Username</a></th>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Last Login</th>
+                            <th scope="col"><a href="{% url 'admin:account_emailaddress_changelist' %}">Verified Email</a></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -94,9 +96,21 @@
                             {% if user.id != object.id %}
                                 <tr>
                                     <th scope="row">{{ user.id }}</th>
+                                    <td><a href="{{ user.get_absolute_url }}">{{ user.username }}</a></td>
                                     <td>{{ user.first_name }}</td>
                                     <td>{{ user.last_name }}</td>
-                                    <td><a href="{{ user.get_absolute_url }}">{{ user.username }}</a></td>
+                                    <td>{{ user.last_login}}</td>
+                                    <td>
+                                        {% for emailaddress in user.emailaddress_set.all %}
+                                            <a href="{% url 'admin:account_emailaddress_change' object_id=emailaddress.id %}">{{ emailaddress }} -
+                                                {% if emailaddress.verified %}
+                                                    <span>Verified</span>
+                                                {% else %}
+                                                    <span>Unverified</span>
+                                                {% endif %}
+                                            </a>
+                                        {% endfor %}
+                                    </td>
                                 </tr>
                             {% endif %}
                         {% endfor %}
