--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -7,10 +7,10 @@
 
     <form action="{% url 'polls:vote' question.id %}" method="post">
         {% csrf_token %}
-        {% for choice in question.choice_set.all %}
+        {% for choice in question.related_question.all %}
             <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
             <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
         {% endfor %}
-        <input type="submit" value="Vote">
+        <input class="btn btn-primary" type="submit" value="Vote">
     </form>
 {% endblock main %}
