--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -66,5 +66,50 @@
     {% endif %}
 {% endblock content_main %}
 
+{% block aside %}
+    <div class="p-4 mb-2 rounded border border-secondary shadow">
+        <h4 class="fst-italic">About this Post</h4>
+        <p>
+            Author:
+            {{ post.author }} -
+            {% if post.author.is_superuser %}
+                {% if post.author.owner %}
+                    Website Owner
+                {% else %}
+                    Admin
+                {% endif %}
+            {% elif post.author.is_staff %}
+                Staff
+            {% else %}
+                User
+            {% endif %}
+        </p>
+        <p>
+            Created: {{ post.created_date|date:'l, d F Y H:m:s' }} <br />
+            {% if post.published_date %}
+                Published: {{ post.published_date|date:'l, d F Y H:m:s' }}
+            {% endif %}
+        </p>
+        <p>
+            {% if post.featured_title %}
+                Featured Title: {{ post.featured_title }}
+            {% endif %}
+        </p>
+        <p>
+            Description: {{ post.description }}
+        </p>
+        <p>
+            Clicks: {{ post.clicks }}
+        </p>
+        <p>
+            Categories: <br />
+            {% include 'blog/includes/post_categories.html' %}
+        </p>
+        {% if user.is_superuser %}
+            <p>Withdrawn: {{ post.withdrawn }}</p>
+        {% endif %}
+    </div>
+{% endblock aside %}
+
 {% block pagination %}
 {% endblock pagination %}
