smol changes and stuff

--- a/blog/templates/blog/base_post_main_block.html
+++ b/blog/templates/blog/base_post_main_block.html
@@ -11,8 +11,8 @@
         {% elif view_name == 'blog:post_draft_list' %}
             <h2>Drafts</h2>
 
-        {% elif view_name == 'blog:post_future_list' %}
-            <h2>Future Posts</h2>
+        {% elif view_name == 'blog:post_scheduled_list' %}
+            <h2>Scheduled Posts</h2>
 
         {% elif view_name == 'blog:post_category_list' %}
             {% if not cats.withdrawn or cats.withdrawn and user.is_superuser %}
